--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,12 @@ dependencies {
     implementation 'com.github.hackware1993:MagicIndicator:1.7.0' // for androidx
 
 
+    implementation 'com.github.zhpanvip:bannerviewpager:3.5.12'
+
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
