--- a/settings.gradle
+++ b/settings.gradle
@@ -2,9 +2,27 @@ pluginManagement {
     repositories {
         google()
         mavenCentral()
+
+        maven { url 'https://www.jitpack.io' }
         maven {
-            url "https://jitpack.io"
+            url 'https://maven.aliyun.com/repository/google'
         }
+        maven {
+            url 'https://maven.aliyun.com/repository/gradle-plugin'
+        }
+        maven {
+            url 'https://maven.aliyun.com/repository/jcenter'
+        }
+        maven {
+            url 'https://maven.aliyun.com/repository/public'
+        }
+        maven {
+            url 'https://maven.aliyun.com/repository/central'
+        }
+        maven {
+            url 'https://plugins.gradle.org/m2/com/gradle'
+        }
+
         gradlePluginPortal()
     }
 }
@@ -13,7 +31,25 @@ dependencyResolutionManagement {
     repositories {
         google()
         maven {
-            url "https://jitpack.io"
+            url "https://www.jitpack.io"
+        }
+        maven {
+            url 'https://maven.aliyun.com/repository/google'
+        }
+        maven {
+            url 'https://maven.aliyun.com/repository/gradle-plugin'
+        }
+        maven {
+            url 'https://maven.aliyun.com/repository/jcenter'
+        }
+        maven {
+            url 'https://maven.aliyun.com/repository/public'
+        }
+        maven {
+            url 'https://maven.aliyun.com/repository/central'
+        }
+        maven {
+            url 'https://plugins.gradle.org/m2/com/gradle'
         }
         mavenCentral()
     }
