--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,10 @@ android {
         enable true
     }
 
+    dataBinding {
+        enabled = true
+    }
+
     //组件化防止资源名称重复
     resourcePrefix "main_"
 }
@@ -88,6 +92,9 @@ dependencies {
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+
+    //万能适配器
+    implementation "io.github.cymchad:BaseRecyclerViewAdapterHelper4:4.1.4"
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
