--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,8 @@ dependencies {
     implementation("androidx.room:room-runtime:$room_version")
     annotationProcessor("androidx.room:room-compiler:$room_version")
     kapt("androidx.room:room-compiler:$room_version")
+    //room 返回值
+    implementation("androidx.room:room-ktx:$room_version")
 
     implementation 'com.tencent:mmkv:1.3.2'
 
